--- a/README
+++ b/README
@@ -1,26 +1,67 @@
-		STAPL Player for Raspberri Pi
+################################################################################
+########		STAPL Player for Raspberri Pi
+################################################################################
 Ported from Actel STAPL Player v1.1, which is based on JAM STAPL Player v2.2. 
 
-	EXAMPLES for MPCEX hardware:
+################################################################################
+########	EXAMPLES for MPCEX hardware:
+################################################################################
 
 Scan the first JTAG chain:
-  sudo ./StaplPlayer -aREAD_IDCODES scan_chain.stp
+  sudo StaplPlayer -aREAD_IDCODES scan_chain.stp
 
 Read IDCODE of the first ACTEL device in the JTAG chain
-  sudo ./StaplPlayer -aREAD_IDCODE scan_chain.stp -poi8 -pod1
+  sudo StaplPlayer -aREAD_IDCODE scan_chain.stp -poi8 -pod1
 
 Read IDCODE of the second ACTEL device in the JTAG chain
-  sudo ./StaplPlayer -aREAD_IDCODE scan_chain.stp -pei8 -ped1
+  sudo StaplPlayer -aREAD_IDCODE scan_chain.stp -pei8 -ped1
 
 Scan the second JTAG chain
-  sudo ./StaplPlayer -aREAD_IDCODES scan_chain.stp -g
+  sudo StaplPlayer -aREAD_IDCODES scan_chain.stp -g
 
-Flush the carrier board with the file ../image/CARB_U1-R6A.stp (it takes ~2 minutes):
-  sudo ./StaplPlayer -aPROGRAM ../image/CARB_U1-R6A.stp -poi8 -pod1
+Flush the carrier board with the file ~/work/JTAG/stapl/CARB_U1-R6A.stp (it takes ~2 minutes):
+  sudo StaplPlayer -aPROGRAM ~work/JTAG/stapl/CARB_U1-R6A.stp -poi8 -pod1
 
 Read IDCODE from the second board in chain (Carrier Board):
-  sudo ./StaplPlayer -aREAD_IDCODE ../image/CARB_U1-R6A.stp -poi8 -pod1
+  sudo StaplPlayer -aREAD_IDCODE ~/work/JTAG/stapl/CARB_U1-R6A.stp -poi8 -pod1
 
 Read IDCODE from the first board in chain (ProtoFEM):
-  sudo ./StaplPlayer -aREAD_IDCODE ../image/CARB_U1-R6A.stp -pei8 -ped1
+  sudo StaplPlayer -aREAD_IDCODE ~/work/JTAG/stapl/CARB_U1-R6A.stp -pei8 -ped1
+
+Reset ProtoFEM
+  sudo StaplPlayer -aRESET_CORTEXM3 ~/work/JTAG/stapl/DSVXTB_r1-R179.stp -g -pei8 -ped1
+
+################################################################################
+########	Signal Map on the RPi GPIO P1 connector
+################################################################################
+
+Header	Name	Wpi	JTAG1	Name	JTAG2	Name
+1	3.3V					
+3	SDA	8				
+5	SCL	9				
+7	GPIO7	7	1	TCK		
+9	0V					
+11	GPIO0	0	5	TMS		
+13	GPIO2	2	3	TDO		
+15	GPIO3	3			1	TCK
+17	3.3V					
+19	MOSI	12				
+21	MISO	13				
+23	SCLK	14				
+25	0V					
+						
+Header	Name	Wpi	JTAG1	Name	JTAG2	Name
+2	5V					
+4	5V					
+6	0V					
+8	TxD	15				
+10	RxD	16				
+12	GPIO1	1	9	TDI		
+14	0V		2	GND		
+16	GPIO4	4			5	TMS
+18	GPIO5	5			9	TDI
+20	0V				2	GND
+22	GPIO6	6			3	TDO
+24	CE0	10				
+26	CE1	11				
 
